@@ -1,2 +1,16 @@
 # JavaProject
-
+Instructions:
+1. Installing lombok:
+  1.1 Download : https://projectlombok.org/download
+  1.2 Open cmd and  change directory to the download location
+  1.3 Type "java -jar lombok.jar" to open installation window
+  1.4 Open Specify Location and select the folder where your IDE is installed
+  1.5 Install/Update
+2.Downloading JavaFxSdk
+  2.1 https://gluonhq.com/products/javafx/
+  2.2 JavaFx-sdk-13 was used in the project
+3.Setting VM Arguments for JavaFX
+  3.1 Open Run Configurations by going to Run As -> Run Configurations
+  3.2 Open the Arguments tab
+  3.3 Add "--module-path="javaFxPath\lib" --add-modules=javafx.controls" to VM arguments and click Apply
+4. Change path from FilePath class to your IDE workspace path.   
